- Added the basic markup (first draft) for the ListSuccess template. - In order to not break the look and feel too much when switching from the list to the edit view, we copied the style definitions for twitter-bootstrap buttons to a dedicated edit_buttons css and added it in. - Fixed a small bug inside the RssDataRecords data parsing. - Added the jquery table sort plugin to enable client side table sorting. - Added a basic init.js for initializing the list view. closes #4887

--- a/pub/less/screen.less
+++ b/pub/less/screen.less
@@ -91,15 +91,10 @@ select
 
     li
     {
-        background: rgba(0, 0, 0, 0.05);
-        border: 0.1em solid rgba(0, 0, 0, 0.3);
-        border-radius: 5px 5px 5px 5px;
-        box-shadow: 0 0.07em 0 rgba(255, 255, 255, 0.7) inset;
         float: left;
         list-style: none outside none;
         margin-right: @layout_spacing;
         position: relative;
-        text-shadow: 0 0.05em 0 rgba(255, 255, 255, 0.7);
 
         a
         {
@@ -117,12 +112,9 @@ select
 
         &:hover
         {
-            background: rgba(0, 0 , 0, 0.1);
-
             a
             {
                 color: #ffffff;
-                text-shadow: 0 0 4px #ffffff;
             }
         }
     }
@@ -133,8 +125,6 @@ select
 
         &:hover
         {
-            background: rgba(0, 0, 0, 0.05);
-
             a
             {
                 color: #000000;
@@ -160,7 +150,7 @@ select
 @legend_height: 1.9em;
 .content-panel
 {
-    background: none repeat scroll 0 0 #F6F6F6;
+    background: none repeat scroll 0 0 #F9F9F9;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px 5px 5px 5px;
     box-shadow: 0 5px 3px rgba(0, 0, 0, 0.2);
@@ -246,9 +236,16 @@ header
     /* content item command menu */
     .action-button-list
     {
+        .action-store
+        {
+            font-weight: bolder;
+            font-size: 13px;
+            padding: 0.45em 1em;
+        }
+
         .info-small
         {
-            left: 53px;
+            left: 35px;
             padding: 0 4px;
             position: absolute;
             text-align: center;
